create-template/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2020-08-26T08:16:30Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: stan-shih-quotes-dev
    resourceVersion: "124356922"
    selfLink: /apis/route.openshift.io/v1/namespaces/stan-shih-quotes-dev/routes/quotesapi
    uid: 71d18aaf-e774-11ea-87eb-0a580a800041
  spec:
    host: quotesapi-stan-shih-quotes-dev.apps.ocp-na2.prod.nextcle.com
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: quotesapi
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-08-26T08:16:30Z"
        status: "True"
        type: Admitted
      host: quotesapi-stan-shih-quotes-dev.apps.ocp-na2.prod.nextcle.com
      routerCanonicalHostname: apps.ocp-na2.prod.nextcle.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
