create-template/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-08-26T08:14:45Z"
    labels:
      app: quotesapi
    name: quotesapi
    namespace: stan-shih-quotes-dev
    resourceVersion: "124355961"
    selfLink: /api/v1/namespaces/stan-shih-quotes-dev/services/quotesapi
    uid: 33ba4202-e774-11ea-b5af-0e18b0a4b171
  spec:
    clusterIP: 172.30.48.22
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: quotesapi
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-08-26T08:13:52Z"
    labels:
      app: quotesdb
    name: quotesdb
    namespace: stan-shih-quotes-dev
    resourceVersion: "124355376"
    selfLink: /api/v1/namespaces/stan-shih-quotes-dev/services/quotesdb
    uid: 1427bed1-e774-11ea-a33b-12f1c648b1b9
  spec:
    clusterIP: 172.30.144.234
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      app: quotesdb
      deploymentconfig: quotesdb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
